# lib-avstack-core

./: .coveragerc  .env  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  link_site_packages.sh  pyproject.toml  sub_mkdocs.yml  test_change.yml
.github/actions/init-poetry/: action.yml
.github/actions/install/: action.yml
.github/actions/test/: action.yml
.github/workflows/: publish_to_pypi.yml  publish_to_test_pypi.yml  test_on_branch.yml  test_on_main.yml  test_on_workflows.yml  tests.yml  unit_test.yml
avstack/: __init__.py  calibration.py  datastructs.py  exceptions.py  hooks.py  maskfilters.py  messages.py  objects.py  sensors.py  time.py  transformations.py
avstack/config/: __init__.py  build_functions.py  config.py  io.py  logging.py  registry.py  root.py  utils.py
avstack/config/handlers/: __init__.py  pickle_handler.py  registry_utils.py  yaml_handler.py
avstack/ego/: __init__.py  vehicle.py
avstack/environment/: __init__.py  base.py  lights.py  objects.py  signs.py  traffic.py
avstack/geometry/: __init__.py  _refchoc.py  base.py  bbox.py  bbox_old.py  carla.py  conversions.py  coordinates.py  datastructs.py  fov.py  frame.py  planes.py  primitives.py  refchoc.py  transformations.py  transforms.py  utils.py
avstack/metrics/: __init__.py
avstack/metrics/assignment/: __init__.py  instantaneous.py  timeseries.py
avstack/modules/: __init__.py  assignment.py  base.py  pipeline.py
avstack/modules/clustering/: __init__.py  clusterers.py  managers.py  types.py
avstack/modules/control/: __init__.py  drone.py  pid.py  types.py  vehicle.py
avstack/modules/estimation/: __init__.py  kalman.py  sampling.py
avstack/modules/fusion/: __init__.py  base.py  clustering.py  track_to_track.py
avstack/modules/localization/: __init__.py  base.py  integrity.py  kalmanbasic.py
avstack/modules/perception/: __init__.py  base.py  detections.py  fov_estimator.py  lanelines.py  monoculardepth.py  object2dbev.py  object2dfv.py  object3d.py  segmentation.py  tmp_ray_trace.py  utils.py
avstack/modules/planning/: __init__.py  base.py  components.py  types.py  vehicle.py
avstack/modules/prediction/: __init__.py  algorithms.py
avstack/modules/safety/: __init__.py  rss.py
avstack/modules/tracking/: __init__.py  _sort.py  base.py  gate_and_score.py  grouptrack.py  multisensor.py  stonesoup.py  tracker2d.py  tracker3d.py  tracks.py
avstack/modules/tracking/libraries/: __init__.py
avstack/modules/tracking/libraries/AB3DMOT/: __init__.py  bbox_utils.py  kalman_filter.py  kitti_utils.py  model.py  utils.py
avstack/modules/tracking/libraries/EagerMOT/: __init__.py  kalman.py  model.py
avstack/utils/: __init__.py  binary_class.py  commands.py  decorators.py  logging.py  maskfilters.py  other.py  pools.py  stats.py
data/test_data/object/ImageSets/: test_copy.txt  train.txt
deployment/: config.properties  convert_to_torchserve.sh  model_config.yaml  start_torchserve.sh
deployment/mmdeploy/: _base_convert_model.sh  mmdeploy_models  run_convert_to_onnx.sh  run_convert_to_tensorrt.sh  run_test_convert.sh  run_test_convert_onnx.sh  run_test_convert_tensorrt.sh  test_deployment_fps.py  test_model_deployment.py
deployment/torchserve/: convert_to_torchserve.sh
docs/about/: installation.md
docs/core/: sensors.md
install/: install_tensorrt.sh
models/: download_mmdet3d_models.sh  download_mmdet_models.sh  download_mmseg_models.sh
models/config/mmseg/: unet_fov.py
models/scripts/: train_mmseg_model.sh
tests/: test_calibration.py  test_datastructs.py  test_fov.py  test_maskfilters.py  test_objects.py  test_sensors.py  test_tforms.py  utilities.py
tests/config/: base_cfg.py  derived_cfg.py  test_cfg.py  test_registry.py
tests/data/: vehicle_truth_data_v1.p
tests/ego/: test_vehicle_ego.py
tests/environment/: test_objects.py
tests/geometry/: test_bbox.py  test_conversions.py  test_coordinates.py  test_fov.py  test_planes.py  test_primitives.py  test_quaternion.py  test_refchoc.py  test_refchoc_datastructs.py  test_reference_frames.py  test_transformations.py  test_transforms.py  test_utils.py
tests/metrics/: test_ospa.py
tests/modules/: test_assignment.py  test_pipeline.py
tests/modules/clustering/: test_cluster_types.py  test_clustering.py  test_clustering_managers.py
tests/modules/control/: test_control_base.py  test_pid.py
tests/modules/estimation/: test_kalman.py
tests/modules/fusion/: test_clustering.py  test_fusion.py
tests/modules/localization/: test_init_localization.py  test_kalman.py  test_kalman_localization.py  test_vehicle_state.py
tests/modules/perception/: test_detections.py  test_fov_estimation.py  test_monoculardepth.py  test_object2dbev.py  test_object2dfv.py  test_object3d.py  test_perception_base.py
tests/modules/planning/: test_collision_detection.py  test_map_planners.py  test_planner_backbones.py  test_planner_base.py
tests/modules/prediction/: test_kinematic_prediction.py  test_prediction.py
tests/modules/safety/: test_rss.py
tests/modules/tracking/: test_gate_and_score.py  test_group_tracking.py  test_multisensor.py  test_stonesoup.py  test_tracker.py  test_tracker3d.py  test_tracker_2d.py  test_tracker_3d.py  test_tracking_types.py  test_tracks.py  track_utils.py
tests/utils/: logger_cfg.py  test_decorators.py  test_logger.py  test_maskfilters.py
