[project]
name = "avstack-core"
version = "0.1.0-alpha.4"
description = "Core library for autonomous vehicle development"
authors = [{ name = "Spencer Hallyburton", email = "spencer.hallyburton@duke.edu" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "self-driving",
    "autonomy",
    "perception",
    "planning",
    "control",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pyyaml",
    "rich",
    "shapely>=2.0,<2.1",
    "addict~=2.4.0",
    "numpy>=1.20, <1.26",
    "filterpy>=1,<2",
    "scipy~=1.9",
    "cython>=0.29,<0.30",
    "numpy-quaternion~=2022.4",
    "numba~=0.58.0",
    "seaborn>=0.13,<0.14",
    "Pillow>=9,<10",
    "opencv-python>4.7, <4.9.0.80",
    "tqdm>=4,<5",
    "filelock<3.12.4",
    "lark~=1.1.1",
    "yapf===0.40.1",
    "stonesoup>=1.2,<1.3",
    "concave_hull~=0.0.7",
    "ftfy>=6.2,<6.3",
    "regex>=2024.7,<2024.8",
]

[project.optional-dependencies]
percep = [
    "scikit-learn~=1.1",
    "albumentations~=1.3.1",
    "torch~=1.13.1",
    "torchvision~=0.14.1",
    "mmcv",
    "mmengine>=0.7.3,<0.8",
    "mmsegmentation",
    "mmdet",
    "mmdet3d",
]
# serve = [
#     "torchserve~=0.8.2",
#     "torch-model-archiver~=0.8.2",
#     "torch-workflow-archiver~=0.2.10",
#     "nvgpu~=0.10.0",
#     "mmdeploy-runtime-gpu",
#     "onnx",
#     "tensorrt",
#     "nvidia-cudnn-cu11",
# ]

[project.urls]
Homepage = "https://avstack.org"
Repository = "https://github.com/avstack-lab/avstack-core"

[dependency-groups]
docs = [
    "mkdocstrings-python>=0.8.3,<0.9",
    "mkdocs-material~=9.0",
]
test = [
    "pytest-cov>=4,<5",
    "bandit~=1.7",
    "black~=22.12.0",
    "mypy>=0,<1",
    "isort~=5.11",
    "flake8~=5.0",
    "autoflake>=1,<2",
    "pytest>=7.4.4",
]

[tool.uv]
default-groups = [
    "docs",
    "test",
]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
explicity = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu117" }
torchvision = { index = "pytorch-cu117" }
mmcv = { url = "https://g-b0ef78.1d0d8d.03c0.data.globus.org/packages/mmcv/torch1.13.1_cu11.7/mmcv-2.0.1-cp310-cp310-linux_x86_64.whl" }
mmdet = { path = "./third_party/mmdetection/", editable = true }
mmdet3d = { path = "./third_party/mmdetection3d/", editable = true }
mmsegmentation = { path = "./third_party/mmsegmentation/", editable = true }

[tool.hatch.build.targets.sdist]
include = [
    "avstack",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
include = [
    "avstack",
    "CHANGELOG.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]
